<resources>
    <string name="app_name">My Application</string>
    <string name="logo_placeholder">Logo</string>
    <string name="next_txt">Next</string>
    <string name="skip_txt">Skip</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="heading_text">Heading</string>
    <string name="logoimage">LogoImage</string>
    <string name="launch_application">Launch Application</string>
    <string name="send_message">Send Message</string>
    <string name="type_message">Message (Not Mandatory)</string>
    <string name="type_recipient_number">Recipient Number</string>
    <string name="send_message_on_whatsapp_business">Message On W.Business</string>
    <string name="whatsapp_direct">WhatsApp Direct</string>
</resources>
