<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#000000"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:cardMaxElevation="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                            android:id="@+id/ccp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:padding="16dp"
                            app:layout_constraintBottom_toTopOf="@+id/phoneNo"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/submitBtnWhatsapp"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_margin="16dp"
                            android:background="@drawable/material_rounded_button_all_corner"
                            android:drawableStart="@drawable/ic_whatsapp_icon"
                            android:drawingCacheQuality="auto"
                            android:padding="16dp"
                            android:paddingStart="16dp"
                            android:paddingLeft="32dp"
                            android:paddingEnd="16dp"
                            android:paddingRight="32dp"
                            android:text="@string/send_message"
                            android:textColor="@color/colorAccent"
                            app:layout_constraintBottom_toTopOf="@+id/submitBtnWhatsappBusiness"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/message" />

                        <EditText
                            android:id="@+id/phoneNo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="@string/type_recipient_number"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:padding="16dp"
                            app:layout_constraintBottom_toTopOf="@+id/message"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ccp" />

                        <EditText
                            android:id="@+id/message"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:autofillHints=""
                            android:gravity="start|top"
                            android:hint="@string/type_message"
                            android:inputType="textMultiLine"
                            android:lines="8"
                            android:maxLines="10"
                            android:minLines="1"
                            android:padding="16dp"
                            android:scrollbars="vertical"
                            app:layout_constraintBottom_toTopOf="@+id/submitBtnWhatsapp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/phoneNo" />

                        <Button
                            android:id="@+id/submitBtnWhatsappBusiness"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_margin="16dp"
                            android:background="@drawable/material_rounded_button_all_corner"
                            android:drawableStart="@drawable/ic_whatsapp_business"
                            android:padding="16dp"
                            android:paddingStart="16dp"
                            android:paddingLeft="32dp"
                            android:paddingEnd="16dp"
                            android:paddingRight="32dp"
                            android:text="@string/send_message_on_whatsapp_business"
                            android:textColor="@color/colorAccent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/submitBtnWhatsapp" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>